@@ -1,3 +1,11 @@
+2013-02-04  Alexey Proskuryakov  <ap@apple.com>
+
+        <rdar://problem/12884778> Sandbox violation due to MediaAccessibility code trying to access ~/Library/Preferences/com.apple.mediaaccessibility.plist
+
+        Reviewed by Sam Weinig.
+
+        * WebProcess/com.apple.WebProcess.sb.in:
+
 2013-02-04  Anders Carlsson  <andersca@apple.com>
 
         Add didCloseOnConnectionWorkQueue to Connection::QueueClient
